# silverlinic-management

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  DATABASE_INTEGRATION.md  PROJECT_CONVENTIONS.md  PowerShell_Profile.ps1  README.md  SYSTEM_CORRECTIONS.md  WINDOWS_SETUP.md  build_and_run.ps1  build_windows.ps1  clinic.db  compile_commands.json  dev_setup.ps1  quick_test_bai  quick_test_bai.cpp  run_app.ps1  run_integration_tests.sh  run_silverlinic.sh  run_tests.sh  run_tests_windows.ps1  test_bai  test_output.txt  test_utils.cpp  vcpkg.json
build_bai_fix/: assessor_manager_demo  beck_anxiety_inventory_demo  pain_body_map_demo  test_PainBodyMap  test_assessor  test_assessor_manager  test_automobile_anxiety_inventory  test_beck_anxiety_inventory  test_beck_depression_inventory  test_case_profile_manager  test_core_classes  test_database  test_datetime  test_datetime_integration  test_family_physician  test_utils
build_clean/: beck_anxiety_inventory_demo  test_ActivitiesOfDailyLiving  test_SCL90R  test_address  test_beck_anxiety_inventory  test_client_manager  test_emergency_contact  test_insurance_company  test_legal_representative  test_pdf
build_linux/: CTestTestfile.cmake  SilverClinicConfig.cmake  assessor_manager_demo  beck_anxiety_inventory_demo  pain_body_map_demo  silverclinic_gui  test_AAIManager  test_AAIManager_CSVNegative  test_ActivitiesOfDailyLiving  test_AddressManager  test_BAIManager  test_BDIManager  test_PainBodyMap  test_SCL90R  test_SCL90RManager  test_address  test_assessor  test_assessor_manager  test_automobile_anxiety_inventory  test_beck_anxiety_inventory  test_beck_depression_inventory  test_case_profile_manager  test_client_manager  test_core_classes  test_database  test_datetime  test_datetime_integration  test_emergency_contact  test_family_physician  test_form_generation  test_insurance_company  test_legal_representative  test_pdf  test_pragmas  test_utils
build_linux/.qt/: QtDeploySupport.cmake
build_linux/SilverClinic_autogen/: deps
build_linux/SilverClinic_lib_autogen/: deps
build_linux/assessor_manager_demo_autogen/: deps
build_linux/beck_anxiety_inventory_demo_autogen/: deps
build_linux/pain_body_map_demo_autogen/: deps
build_linux/silverclinic_gui_autogen/: deps  mocs_compilation.cpp
build_linux/test_AAIManager_CSVNegative_autogen/: deps
build_linux/test_AAIManager_autogen/: deps
build_linux/test_ActivitiesOfDailyLiving_autogen/: deps
build_linux/test_AddressManager_autogen/: deps
build_linux/test_BAIManager_autogen/: deps
build_linux/test_BDIManager_autogen/: deps
build_linux/test_PainBodyMap_autogen/: deps
build_linux/test_SCL90RManager_autogen/: deps
build_linux/test_SCL90R_autogen/: deps
build_linux/test_address_autogen/: deps
build_linux/test_assessor_autogen/: deps
build_linux/test_assessor_manager_autogen/: deps
build_linux/test_automobile_anxiety_inventory_autogen/: deps
build_linux/test_beck_anxiety_inventory_autogen/: deps
build_linux/test_beck_depression_inventory_autogen/: deps
build_linux/test_case_profile_manager_autogen/: deps
build_linux/test_client_manager_autogen/: deps
build_linux/test_core_classes_autogen/: deps
build_linux/test_database_autogen/: deps
build_linux/test_datetime_autogen/: deps
build_linux/test_datetime_integration_autogen/: deps
build_linux/test_emergency_contact_autogen/: deps
build_linux/test_family_physician_autogen/: deps
build_linux/test_form_generation_autogen/: deps
build_linux/test_insurance_company_autogen/: deps
build_linux/test_legal_representative_autogen/: deps
build_linux/test_pdf_autogen/: deps
build_linux/test_pragmas_autogen/: deps
build_linux/test_utils_autogen/: deps
cmake/: SilverClinicConfig.cmake.in
data/: .gitkeep  clinic.db-shm  clinic.db-wal
data/pdfs/: .gitkeep
documents/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README_TESTS.md  SOLUCAO_ANTI_ERRO_DIRETORIO.md  TESTING_GUIDE.md
examples/: assessor_manager_demo.cpp  beck_anxiety_inventory_demo.cpp  pain_body_map_demo.cpp
html/: case-info.html
include/: Address.h  Assessor.h  CaseProfile.h
include/core/: Address.h  Assessor.h  CaseProfile.h  Client.h  DatabaseConfig.h  DateTime.h  Utils.h
include/db/: DatabaseInitializer.h  DatabaseManager.h  DatabaseSchema.h
include/forms/: ActivitiesOfDailyLiving.h  AutomobileAnxietyInventory.h  BeckAnxietyInventory.h  BeckDepressionInventory.h  EmergencyContact.h  FamilyPhysician.h  InsuranceCompany.h  LegalRepresentative.h  PainBodyMap.h  SCL90R.h
include/managers/: ActivitiesOfDailyLivingManager.h  AddressManager.h  AssessorManager.h  AutomobileAnxietyInventoryManager.h  BeckAnxietyInventoryManager.h  BeckDepressionInventoryManager.h  CaseProfileManager.h  ClientManager.h  FormManager.h  PainBodyMapManager.h  SCL90RManager.h
include/services/: CaseProfileService.h
include/utils/: CSVImporter.h  CSVUtils.h  DatabaseSession.h  DbLogging.h  IdAllocator.h  PDFConfig.h  Result.h  StructuredLogger.h  ValidationMessages.h
scripts/: README_duplicates.md  duplicates_queries.sql  export_duplicates.ps1  export_duplicates.sh  reset_clinic_db.ps1  reset_clinic_db.sh  reset_clinic_db.sql
settings/: README.md
src/: Client.cpp  PDFConfig.cpp  main.cpp
src/core/: Address.cpp  Assessor.cpp  CaseProfile.cpp  Client.cpp  DatabaseConfig.cpp  DateTime.cpp  Utils.cpp
src/db/: DatabaseInitializer.cpp  DatabaseManager.cpp  DatabaseManager.h  DatabaseSchema.cpp
src/forms/: ActivitiesOfDailyLiving.cpp  AutomobileAnxietyInventory.cpp  BeckAnxietyInventory.cpp  BeckDepressionInventory.cpp  EmergencyContact.cpp  FamilyPhysician.cpp  InsuranceCompany.cpp  LegalRepresentative.cpp  PainBodyMap.cpp  SCL90R.cpp
src/gui/: dashboard.cpp  dashboard.h  main.cpp
src/managers/: ActivitiesOfDailyLivingManager.cpp  AddressManager.cpp  AssessorManager.cpp  AutomobileAnxietyInventoryManager.cpp  BeckAnxietyInventoryManager.cpp  BeckDepressionInventoryManager.cpp  CaseProfileManager.cpp  ClientManager.cpp  FormManager.cpp  PainBodyMapManager.cpp  SCL90RManager.cpp
(+63 files in other folders)
